# kizuna

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  tox.ini
docs/: conf.py  index.md  installation.md
docs/api_reference/: config.rst  index.rst
docs/api_reference/core/: assets.rst  datatypes.rst  index.rst
docs/api_reference/core/datatypes/: color.rst  index.rst  ivector2.rst  vector2.rst
requirements/: requirements-dev.in  requirements-dev.txt
src/kizuna/: config.py
src/kizuna/backends/: __init__.py  base.py  pyglet.py
src/kizuna/core/: constants.py  controllers.py  exceptions.py  input.py  validation.py
src/kizuna/core/assets/: __init__.py  base.py  font.py  image.py  paths.py
src/kizuna/core/datatypes/: __init__.py  color.py  ivector2.py  vector2.py
src/kizuna/management/: exceptions.py  game_loop.py  settings.py  setup.py
src/kizuna/rendering/: __init__.py  batches.py  drawables.py  scenes.py
src/kizuna/systems/input/: constants.py  controller.py
src/kizuna/systems/stage2d/: components.py  controller.py  entities.py  exceptions.py
src/kizuna/systems/ui/: controller.py
src/kizuna/utils/: types.py
src/kizuna_cli/: __main__.py  entrypoint.py
src/kizuna_cli/commands/: export.py  new.py  run.py
test/: test_example.py
test/kizuna/core/datatypes/: test_ivector2.py  test_vector2.py
